--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "@vue/composition-api": "^1.7.1",
     "@vueuse/core": "^9.4.0",
     "@vueuse/integrations": "^9.4.0",
-    "chart.js": "^3.9.1",
-    "vue-chartjs": "^4.1.2",
     "axios": "^1.1.3",
+    "chart.js": "^3.9.1",
     "core-js": "^3.8.3",
+    "exceljs": "^4.3.0",
     "pinia": "^2.0.23",
     "vue": "^2.6.14",
+    "vue-chartjs": "^4.1.2",
     "vue-router": "^3.5.1",
     "vuetify": "^2.6.0"
   },
